<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.application.kotproject.login.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="@dimen/img_size_m"
            android:layout_height="@dimen/img_size_m"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/babychick" />

        <ImageView
            android:id="@+id/login_username_img"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_account_circle_black_48dp"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/login_password_layout"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_username_layout" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_username_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toRightOf="@+id/login_username_img"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_icon">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/login_password_img"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_lock_black_48dp"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/login_password_layout"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_password_layout" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toRightOf="@+id/login_password_img"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_username_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/login_signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/signin"
            android:textColor="@color/brown"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_layout"
            app:layout_constraintBottom_toTopOf="@+id/login_login_button"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:backgroundTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_signin_button" />

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="@dimen/space_xl"
            android:layout_height="@dimen/space_xl"
            app:layout_constraintBottom_toBottomOf="@+id/login_login_button"
            app:layout_constraintLeft_toLeftOf="@+id/login_login_button"
            app:layout_constraintRight_toRightOf="@+id/login_login_button"
            app:layout_constraintTop_toTopOf="@+id/login_login_button" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>